UtahLiveDataTest/src/objects/PanelUser__c.object
<CustomObject>
    <description>[Business]  Association of a User to a Review panel</description>
    <fields>
        <fullName>HideDelete__c</fullName>
        <formula>IF(ReviewPanel__r.ReviewStep__r.ReviewGroup__r.Announcement__r.OrganizationName__c = &apos;USBE&apos;, ReviewPanel__r.ReviewStep__r.ReviewGroup__r.OwnerId != $User.Id, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NoOfApplicationsAssigned__c</fullName>
        <label>No Of Applications Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReviewPanel__c</fullName>
        <label>Review Panel</label>
        <referenceTo>ReviewPanel__c</referenceTo>
        <relationshipName>Review_Panel_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReviewerName__c</fullName>
        <formula>Reviewer__r.FirstName + &quot; &quot; + Reviewer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewerProfile__c</fullName>
        <formula>if(TRIM(Reviewer__r.Profile.Name)= &apos;PT1&apos; , &apos;System Administrator&apos;,Reviewer__r.Profile.Name)</formula>
        <label>Reviewer Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Panel_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Panel User</label>
    <nameField>
        <displayFormat>PU-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panel Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>